; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_88.c_ftp_clean.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_88.c_ftp_clean.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"CWD ..\0D\0A\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"RMD %s\0D\0A\00", align 1
@basedir = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [7 x i8] c"QUIT\0D\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ftp_clean(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 (i32, i8*, ...) @ftp_printf(i32 %3, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @ftp_read(i32 %5)
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @basedir, align 4
  %9 = call i32 (i32, i8*, ...) @ftp_printf(i32 %7, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %8)
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @ftp_read(i32 %10)
  %12 = load i32, i32* %2, align 4
  %13 = call i32 (i32, i8*, ...) @ftp_printf(i32 %12, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @ftp_read(i32 %14)
  ret void
}

declare dso_local i32 @ftp_printf(i32, i8*, ...) #1

declare dso_local i32 @ftp_read(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
